# btc_news_analyzer

./: .gitignore  Cargo.toml  README.md  config.toml
btc_news_analyzer/: .gitignore  Cargo.toml  test_compile.rs
btc_news_analyzer/src/: errors.rs  lib.rs  main.rs  routers.rs
btc_news_analyzer/src/holders/: mod.rs  news.rs  price.rs
btc_news_analyzer/src/services/: collector.rs  processor.rs
btc_news_analyzer/tests/: integration_tests.rs
src/: config.rs  models.rs
src/services/: decision.rs  mod.rs
