[package]
name = "btc_news_analyzer"
version = "0.1.0"
edition = "2021"
authors = ["Davlatbek Rabbimov"]

[dependencies]
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.0"
thiserror = "1.0"
anyhow = "1.0"
futures = "0.3"
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }
dotenvy = "0.15"
feed-rs = "1.3"
urlencoding = "2.1"

[dev-dependencies]
tokio-test = "0.4"